--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>CheckMark</title>
     <script src='/dist/main.js' defer></script>
     <link rel='stylesheet' href='/static/styles.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id='root'></div>
