--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <script src='/dist/main.js' defer></script>
     <link rel='stylesheet' href='/static/styles.css' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/static/blue-checkmark.jpeg">
   </head>
   <body>
     <div id='root'></div>
